Fix: word wrap issue

--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,7 @@ body {
 }
 
 h1 {
+  position: absolute;
   color: #ff8882;
   margin-top: 0;
   font-family: "Poppins", sans-serif;
@@ -55,8 +56,10 @@ p {
   background-repeat: no-repeat;
   /* text-fill-color: rgba(255, 255, 255, 0); */
   -webkit-text-fill-color: rgba(255, 255, 255, 0);
-  background-size: 300px;
+  background-size: 70vh;
   background-position: center;
+  word-break: break-all;
+  letter-spacing: 0px;
 }
 
 button {
